fixing text overflowing

--- a/css/main.scss
+++ b/css/main.scss
@@ -57,3 +57,7 @@ pre.highlight code,
   border: 3px solid #fff;
   border-radius:100%;
 }
+
+article.post-container.post-container--single {
+  word-wrap: break-word;
+}
